# Bedrock-Toolkit

./: .pre-commit-config.yaml  Bedrock_Tool_Calling.ipynb  README.md  pyproject.toml  setup.py
bedrock_toolkit/: __init__.py  bedrock_client.py  bedrock_pricing.py  context_appender.py  conversation_manager.py  logger_manager.py  model_runner.py  prompts.py  streamlit_utils.py  tool_manager.py
bedrock_toolkit/cache_services/: __init__.py  base.py  dynamodb_cache.py  factory.py  in_memory_cache.py
bedrock_toolkit/chat_history/: __init__.py  base.py  dynamodb_storage.py  factory.py  local_storage.py
bedrock_toolkit/common/: __init__.py  dynamodb.py
examples/: basic.py  city_info_mock.py  city_info_real.py  converse.py  converse_cache.py  converse_cache_stateless.py  converse_stateless.py  dynamic_few_shot_examples.py  faiss_search.py  internet_search.py  trip_planning.py  workout_plan.py  workout_plan_chunks.py
