[tool.poetry]
name = "bedrock_toolkit"
version = "0.1.0"
description = "A toolkit for working with AWS Bedrock"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bedrock_toolkit"}]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
boto3 = "^1.34.161"
pydantic = "^2.8.2"
rich = "^13.7.1"
requests = "^2.32.3"
Wikipedia-API = "^0.6.0"
tavily-python = "^0.3.9"
mypy_boto3_bedrock_runtime = "^1.34.149"
boto3-stubs = {extras = ["bedrock-runtime"], version = "^1.34.161"}
streamlit = "^1.38.0"
spacy = "^3.7.6"
watchdog = "<5"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240712"
boto3-stubs = {extras = ["bedrock-agent-runtime", "bedrock-runtime", "cloudformation", "dynamodb", "ec2", "lambda", "rds", "s3", "sqs"], version = "^1.34.161"}
ruff = "^0.5.7"
mypy = "^1.11.1"
commitizen = "^3.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"